# puzzle-bazel

./: .bazelignore  .bazelrc  .editorconfig  .gitignore  .gitmodules  BUILD.bazel  LICENSE.txt  MODULE.bazel  NOTICE.txt  README.md
.github/workflows/: bazel.yml  registries.yml
deepinthinking/modules/besu/: metadata.json
deepinthinking/modules/dagger/: metadata.json
deepinthinking/modules/dataseer-besu/: metadata.json
deepinthinking/modules/puzzle-bazel-lint/: metadata.json
deepinthinking/modules/puzzle-bazel-lint/2025.0.0-SNAPSHOT/: source.json
deepinthinking/modules/puzzle-bazel-lint/2025.0.0-SNAPSHOT/overlay/: MODULE.bazel
registries/deepinthinking/modules/besu/23.10.3-hotfix/: source.json
registries/deepinthinking/modules/besu/24.10.0/: MODULE.bazel  source.json
registries/deepinthinking/modules/dagger/: metadata.json
registries/deepinthinking/modules/dagger/2.52/: MODULE.bazel  source.json
registries/deepinthinking/modules/dataseer-besu/2025.0.0-SNAPSHOT/: MODULE.bazel  source.json
registries/deepinthinking/modules/google-dagger/2.52/: MODULE.bazel  source.json
registries/deepinthinking/modules/hyperledger-besu/: metadata.json
registries/deepinthinking/modules/hyperledger-besu/24.10.0/: MODULE.bazel  source.json
registries/deepinthinking/modules/immutables/: metadata.json
registries/deepinthinking/modules/immutables-immutables/: metadata.json
registries/deepinthinking/modules/immutables-immutables/2.10.1/: MODULE.bazel  source.json
registries/deepinthinking/modules/immutables/2.10.1/: MODULE.bazel  source.json
(+4 files in other folders)
