""" Puzzle Bazel """
module(
    name = "puzzle-bazel",
    repo_name = "org_deepinthinking_puzzle_bazel",
    compatibility_level = 1,
    version = "2025.0.0-SNAPSHOT",
)

bazel_dep(name = "rules_license", version = "1.0.0")
# bazel_dep(name = "dagger", version = "2.52")
bazel_dep(name = "immutables", version = "2.9.3")
# bazel_dep(name = "besu", version = "24.10.0")
